Use all query fields to search in PublicationController