@@ -1,9 +1,16 @@
 package mcia.publications.controller;
 
+import java.util.Collections;
+import java.util.Date;
 import java.util.List;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
+
+import javax.validation.constraints.Min;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -13,29 +20,51 @@ import org.springframework.web.bind.annotation.RestController;
 
 import lombok.extern.slf4j.Slf4j;
 import mcia.publications.domain.Publication;
+import mcia.publications.domain.Publisher;
 import mcia.publications.repository.PublicationRepository;
-import rx.Observable;
+import mcia.publications.repository.PublisherRepository;
 
 @RestController
 @RequestMapping("/api/publications")
 @Slf4j
 public class PublicationController {
 
+	private static final int PAGE_SIZE = 10;
+	private static final String AFTER = "1990";
+	private static final String BEFORE = "3000";
+
 	@Autowired
 	PublicationRepository publicationRepository;
 
+	@Autowired
+	PublisherRepository publisherRepository;
+
 	@RequestMapping(value = "", method = RequestMethod.GET)
-	public Observable<List<Publication>> query(
+	public Page<Publication> query(
 			@RequestParam(name = "q", defaultValue = "") String query,
-			@RequestParam(name = "author", defaultValue = "") String authorId,
-			@RequestParam(name = "type", defaultValue = "") String type) {
-		log.info("GET: publications q={}, author={}, type={}", query, authorId, type);
-		if (query.isEmpty()) {
-			return Observable.from(publicationRepository.findAll()).toList();
+			@RequestParam(name = "author", required = false) String authorId,
+			@RequestParam(name = "type", defaultValue = "all") String type,
+			@RequestParam(name = "after", defaultValue = AFTER) @DateTimeFormat(pattern = "yyyy") Date after,
+			@RequestParam(name = "before", defaultValue = BEFORE) @DateTimeFormat(pattern = "yyyy") Date before,
+			@RequestParam(name = "page", defaultValue = "0") @Min(0) Integer page) {
+		log.info("GET: publications page={}, q={}, author={}, type={}, after={}, before={}",
+				page, query, authorId, type, after, before);
+
+		// Fetch publishers matching type
+		List<String> publisherIds;
+		if (!type.equalsIgnoreCase("all")) {
+			List<Publisher> publishers = publisherRepository.findByType(type);
+			publisherIds = publishers.stream().map(Publisher::getId).collect(Collectors.toList());
+			log.debug("Found {} publishers matching type={}", publisherIds.size(), type);
 		} else {
-			Stream<Publication> stream = publicationRepository.search(query);
-			return Observable.from(stream::iterator).toList();
+			publisherIds = Collections.emptyList();
 		}
+
+		// Run search
+		Page<Publication> result = publicationRepository.search(
+				query, authorId, publisherIds, after, before, new PageRequest(page, PAGE_SIZE));
+		log.info("Matched {} elements in {} pages", result.getTotalElements(), result.getTotalPages());
+		return result;
 	}
 
 	@RequestMapping(value = "/{id}", method = RequestMethod.GET)
